perf: optimize page accessibility

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
       http-equiv="Content-Security-Policy"
       content="upgrade-insecure-requests"
     />
+
     <meta
       name="viewport"
-      content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"
+      content="width=device-width,initial-scale=1"
     />
     <title>cc heart blog</title>
+    <meta name="description" content="personal blog, love of sharing, technology and essays">
   </head>
 
   <body>
