docs: update techs/base/index.md and add techs/node/index.md

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
       content="upgrade-insecure-requests"
     />
 
-    <meta
-      name="viewport"
-      content="width=device-width,initial-scale=1"
-    />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>cc heart blog</title>
-    <meta name="description" content="personal blog, love of sharing, technology and essays">
+    <meta
+      name="description"
+      content="personal blog, love of sharing, technology and essays"
+    />
   </head>
 
   <body>
