chore: update author and copyright information

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
 
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>cc heart blog</title>
+    <title>Blog</title>
     <meta
       name="description"
       content="personal blog, love of sharing, technology and essays"
